# Q-PROTEUS

./: .gitignore  README.md  efficacy_predictor.pkl  final_amp_dataset_sample.csv  pyproject.toml  requirements.txt  rri_vs_log10_resistance_summary.csv  script.py  toxicity_predictor.pkl
data/: Anti-Gram-_amps.fasta  DRAMP_general_amps.xlsx  amp_vs_non_amp_training_dataset.csv  apd3.fasta  complete_curated_combined_gramnegative_amps.csv  curated_combined_gramnegative_amps.csv  curated_dramp_natural_gramnegative_amps.csv  dramp_mic_expanded.xlsx  dramp_training_dataset.csv  hemolytic.fasta  hemolytic_data.csv  natural_amps.fasta  non_hemolytic.fasta  peptides.csv  rri_validation_set.csv  scaled_rri_validation.csv  toxicity_data.csv  toxicity_training_dataset.csv  uniprotkb_length_10_TO_55_AND_reviewed_2025_09_03.fasta  uniprotkb_length_10_TO_80_AND_reviewed_2025_09_02.fasta
logs/: efficacy_diagnostics.txt  prob_compare_test.csv
models/: discriminator.json  efficacy_predictor.pkl  efficacy_predictor_calibrated.pkl  feature_columns.pkl  feature_list.txt  feature_scaler.pkl  mic_regressor.pkl  mic_regressor_lgbm.pkl  toxicity_feature_scaler.pkl  toxicity_predictor.pkl
qproteus/: __init__.py  analysis.py  constants.py  data.py  evaluators.py  features.py  ga.py  metrics.py  models.py  qiea.py  rri.py  sequence.py
scripts/: 01_curate_amp_dataset.py  02_build_training_dataset.py  03_prepare_toxicity_data.py  04_train_efficacy_model.py  05_train_toxicity_model.py  06_validate_rri.py  07_run_optimization.py  08_analyze_runs.py  09_mutational_scan.py  10_blastp_novelty.py  (+7 more)
(+36 files in other folders)
