[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qproteus"
version = "0.1.0"
description = "Methods-only reproduction code for the Q-PROTEUS AMP durability framework."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "biopython>=1.83",
  "joblib>=1.3",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.0",
  "scikit-learn>=1.4",
  "scipy>=1.11",
  "seaborn>=0.13",
  "statsmodels>=0.14",
  "tqdm>=4.66",
  "xgboost>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["qproteus*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
